src/objects/kdKnowledgeDetail__c.object
<CustomObject>
    <fields>
        <fullName>CommentCopy1__c</fullName>
        <label>CommentCopy1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentCopy2__c</fullName>
        <label>CommentCopy2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentCopy3__c</fullName>
        <label>CommentCopy3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentLike__c</fullName>
        <label>CommentLike</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InThisWeek__c</fullName>
        <defaultValue>true</defaultValue>
        <label>InThisWeek</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCopy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCopy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFavorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFavorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLike__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLike</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsView__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsView</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>kdKnowledgeDetail_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kdKnowledgeCopy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業ナレッジ Copy</label>
        <referenceTo>kdKnowledge__c</referenceTo>
        <relationshipLabel>営業ナレッジ詳細 (営業ナレッジ Copy)</relationshipLabel>
        <relationshipName>kdKnowledgeDetail_Copy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kdKnowledgeFavorite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業ナレッジ Favorite</label>
        <referenceTo>kdKnowledge__c</referenceTo>
        <relationshipLabel>営業ナレッジ詳細 (営業ナレッジ Favorite)</relationshipLabel>
        <relationshipName>kdKnowledgeDetail_Favorite</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kdKnowledgeLike__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業ナレッジ Like</label>
        <referenceTo>kdKnowledge__c</referenceTo>
        <relationshipLabel>営業ナレッジ詳細 (営業ナレッジ Like)</relationshipLabel>
        <relationshipName>kdKnowledgeDetail_Like</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kdKnowledgeView__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業ナレッジ View</label>
        <referenceTo>kdKnowledge__c</referenceTo>
        <relationshipLabel>営業ナレッジ詳細 (営業ナレッジ View)</relationshipLabel>
        <relationshipName>kdKnowledgeDetail_View</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kdKnowledge__c</fullName>
        <label>営業ナレッジ</label>
        <referenceTo>kdKnowledge__c</referenceTo>
        <relationshipLabel>営業ナレッジ詳細</relationshipLabel>
        <relationshipName>kdKnowledgeDetail_MasterDetail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>営業ナレッジ詳細</label>
    <nameField>
        <displayFormat>EKD-{00000000}</displayFormat>
        <label>kdKnowledgeDetail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>